source/scss/app.scss
@import "vars";
@import "mixins";

*,
:before,
:after {
  box-sizing: border-box;
  outline: none;
}

html,
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  color: white;
  width: 100%;
  min-height: 100%;
}

html {
  background-color: #38384c;
}

body {
  @include font-size-base();
  margin: 0;
  overflow-x: hidden;
}

.scroll-wrapper-outer {
  position: fixed;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.scroll-wrapper-inner {
  position: relative;
  height: 100%;
  width: calc(100vw + 40px);
  margin-left: -20px;
  padding: 0 20px;
  overflow: scroll;
  -webkit-overflow-scrolling: touch;
}

.content {
  max-width: 600px;
  margin: 0 auto;
  padding: 0 20px 50px;
  padding-bottom: 50px;
  transition: transform 0.4s $ease-out;

  &.menuIsVisible {
    transform: translateX(-50%);
  }

  @media (min-width: $breakpoint-md) {
    padding: 0 40px 50px;
  }
}

.stocks {
  width: 100%;
  border-collapse: collapse;

  tr {
    vertical-align: baseline;
  }
}

.form-container {
  padding-top: 40px;
}

.form-button {
  @include button($border-color);
  @include font-size-lg;
  display: block;
  width: 100%;
  color: white;
  font-size: 2em;
  font-weight: bold;
  border-radius: 10px;
  padding: 5px 0 10px;

  &:disabled {
    opacity: 0.4;
  }
}

